# The-Boston-Drone-School

./: .env.example  .gitignore  .render-deploy  ACTIVATE_CLAUDE_CODE.md  CHECKOUT_WITHOUT_STRIPE.md  CLAUDE_CODE_GUIDE.md  CLAUDE_CODE_SWITCH.md  CLAUDE_FOR_BDS.md  CLAUDE_SETUP.md  COURSES_READY_GUIDE.md  Cargo.toml  DEPLOYMENT-VERIFICATION.md  DEPLOYMENT_AUDIT.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_FIXED.md  DEPLOYMENT_INSTRUCTIONS.md  DEPLOYMENT_READY.md  DEPLOYMENT_TRIGGER.md  DEPLOY_FRONTEND.md  DEPLOY_STATUS.md  DNS_RECORDS_TO_ADD.md  DRONE_VIDEO_RESOURCES.md  DUAL_DOMAIN_SETUP.md  Dockerfile  Dockerfile.multi  EXTERNAL_SYSTEMS.md  FIXES_SUMMARY.md  GIT_HISTORY_CLEANED.md  GOOGLE_OAUTH_SETUP.md  IMPLEMENTATION-COMPLETE.md  IMPLEMENTATION_ROADMAP.md  LEGAL_COMPLIANCE_REVIEW.md  MEDIA-CREDITS.md  PART_107_IMPLEMENTATION_SUMMARY.md  PAYMENT_AND_UI_ENHANCEMENTS.md  PAYMENT_INTEGRATION_GUIDE.md  PLATFORM_COMPLETE.md  PREMIUM-DESIGN-IMPLEMENTATION.md  PREMIUM-DESIGN-SUMMARY.md  QUICK-REFERENCE.md  (+44 more)
boston-drone-school/: .dockerignore  Cargo.toml  README.md  render.yaml
boston-drone-school/src/: config.rs  main.rs  state.rs
boston-drone-school/src/db/: mod.rs
boston-drone-school/src/handlers/: admin_handlers.rs  course_handlers.rs  dashboard_handlers.rs  mod.rs  payment_handlers.rs  user_handlers.rs
boston-drone-school/src/models/: admin.rs  course.rs  mod.rs  payment.rs  user.rs
boston-drone-school/src/routes/: admin_routes.rs  course_routes.rs  dashboard_routes.rs  mod.rs  payment_routes.rs  user_routes.rs
boston-drone-school/src/services/: admin_service.rs  auth_service.rs  course_service.rs  mod.rs  (+1 more)
src/: config.rs  (+1 more)
(+224 files in other folders)
