[package]
name = "boston-drone-school"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.5", features = ["runtime-tokio-rustls", "postgres"] }
bcrypt = "0.12"
stripe = "0.22"
jsonwebtoken = "8.1"
validator = "0.14"