[package]
name = "boston-drone-school"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "=4.4.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15"
tokio = { version = "1", features = ["full"] }
bcrypt = "0.12"
jsonwebtoken = "8.1"
regex = "1"
uuid = { version = "1", features = ["serde", "v4"] }
url = "2.4.1"